First Version of Tutorial and Functions documentation

--- a/examples/WP05_Models_involving_memory_terms/P0001_WKB_expansion/docs/wkb_fr_schr.tex
+++ b/examples/WP05_Models_involving_memory_terms/P0001_WKB_expansion/docs/wkb_fr_schr.tex
@@ -7,6 +7,7 @@
 \usepackage{cleveref}
 \usepackage[affil-it]{authblk}
 \usepackage{fullpage}
+\usepackage{graphicx}
 
 \hfuzz=4pt
 
@@ -25,7 +26,7 @@
 \let\@fnsymbol\@arabic
 \makeatother
 
-\title{{\bf WKB expansion for a fractional Schr\"odinger equation}}
+\title{{WKB expansion for a fractional Schrödinger equation}}
 
 \author{Umberto Biccari} 
 \affil{\small DeustoTech, University of Deusto, 48007 Bilbao, Basque Country, Spain.}
@@ -169,6 +170,10 @@ Finally, for $s\in(1/2,1)$ the situation is the opposite. We have $1-2s<0$ and, 
 \end{align*}
 
 Hence, we can conclude that for $s> 1/2$ the group velocity increases with the frequency and that the high frequency solutions are traveling faster and faster. On the other hand, for $s<1/2$, the group velocity decreases with the frequency the high frequency solutions are traveling and slower and slower. This behavior has then consequences from the point of view of observation properties for the solutions and, in particular, it confirms the already known results presented in \cite{biccari2014internal}.
+
+\begin{figure}[h]
+	\includegraphics[width=8cm]{../figures-latex/plot_frac_schrodinger1_01_1.png}
+\end{figure}
 
 \bibliography{biblio}
 \end{document}
